--- a/TickeTest.html
+++ b/TickeTest.html
@@ -4,6 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>TradingView Widget</title>
+  <style>
+    .tradingview-widget-copyright {
+      display: none !important;
+    }
+  </style>
 </head>
 <body>
   <!-- TradingView Widget BEGIN -->
