--- a/digitalclock.html
+++ b/digitalclock.html
@@ -3,11 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Countdown Timer</title>
-    <script src="https://cdn.logwork.com/widget/countdown.js"></script>
+    <title>Clock Widget</title>
+    <script src="https://cdn.logwork.com/widget/text.js"></script>
 </head>
 <body>
-    <h1>Countdown Timer</h1>
-    <a href="https://logwork.com/countdown-timer" class="countdown-timer" data-timezone="Asia/Manila" data-date="2024-12-08 21:37">Countdown Timer</a>
+    <h1>Current Time in Manila</h1>
+    <a href="https://logwork.com/current-time-in-manila-philippines" 
+       class="clock-widget-text" 
+       data-timezone="Asia/Manila" 
+       data-language="en" 
+       data-textcolor="#ffffff" 
+       data-background="#474747" 
+       data-digitscolor="#ffffff">Manila, Philippines</a>
 </body>
 </html>
