--- a/digitalclock.html
+++ b/digitalclock.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Current Time in Manila</title>
+    <title>Clock Widget</title>
     <script src="https://cdn.logwork.com/widget/text.js"></script>
 </head>
 <body>
-    <h1>Current Time in Manila</h1>
     <a href="https://logwork.com/current-time-in-manila-philippines" 
        class="clock-widget-text" 
        data-timezone="Asia/Manila" 
