--- a/digitalclock.html
+++ b/digitalclock.html
@@ -5,6 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clock Widget</title>
     <script src="https://cdn.logwork.com/widget/text.js"></script>
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background-color: #000; /* Optional background color */
+        }
+    </style>
 </head>
 <body>
     <a href="https://logwork.com/current-time-in-manila-philippines" 
