--- a/cmw2.html
+++ b/cmw2.html
@@ -20,7 +20,7 @@
         "width": "700",
         "isTransparent": false,
         "height": "450",
-        "symbol": "NASDAQ:AAPL",
+        "symbol": "BINANCE:BTCUSDT.P",
         "showIntervalTabs": true,
         "displayMode": "single",
         "locale": "en",
