--- a/heatmap.html
+++ b/heatmap.html
@@ -3,42 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TradingView Crypto Heatmap</title>
+    <title>Crypto Heatmap</title>
     <style>
-        body {
-            margin: 0;
-            padding: 0;
-            background-color: black; /* Black background for consistency */
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh; /* Full-screen height */
-        }
-
-        .tradingview-widget-container {
-            width: 100%;
-            height: 100%;
-            position: relative;
-        }
-
-        .tradingview-widget-container__widget {
-            width: 100%;
-            height: 100%;
-        }
-
         .tradingview-widget-copyright {
-            text-align: center;
-            color: white;
-            margin-top: 10px;
-        }
-
-        .tradingview-widget-copyright a {
-            color: #3b78e7;
-            text-decoration: none;
-        }
-
-        .tradingview-widget-copyright a:hover {
-            text-decoration: underline;
+            display: none;
         }
     </style>
 </head>
@@ -46,26 +14,21 @@
     <!-- TradingView Widget BEGIN -->
     <div class="tradingview-widget-container">
         <div class="tradingview-widget-container__widget"></div>
-        <div class="tradingview-widget-copyright">
-            <a href="https://www.tradingview.com/" rel="noopener nofollow" target="_blank">
-                <span class="blue-text">Track all markets on TradingView</span>
-            </a>
-        </div>
         <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-crypto-coins-heatmap.js" async>
         {
-        "dataSource": "Crypto",
-        "blockSize": "market_cap_calc",
-        "blockColor": "change",
-        "locale": "en",
-        "symbolUrl": "",
-        "colorTheme": "dark",
-        "hasTopBar": false,
-        "isDataSetEnabled": false,
-        "isZoomEnabled": true,
-        "hasSymbolTooltip": true,
-        "isMonoSize": false,
-        "width": "100%",
-        "height": "100%"
+          "dataSource": "Crypto",
+          "blockSize": "market_cap_calc",
+          "blockColor": "change",
+          "locale": "en",
+          "symbolUrl": "",
+          "colorTheme": "dark",
+          "hasTopBar": true,
+          "isDataSetEnabled": true,
+          "isZoomEnabled": true,
+          "hasSymbolTooltip": true,
+          "isMonoSize": false,
+          "width": 1200,
+          "height": 320
         }
         </script>
     </div>
